AI_File_Summarier_Code_Base/force-app/main/default/objects/AI_File_Summarizer_Setting__mdt/AI_File_Summarizer_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Stores configurable settings for the AI File Summarizer feature, including parameters that control file processing, summarization behavior, and feature enablement.</description>
    <label>AI File Summarizer Setting</label>
    <pluralLabel>AI File Summarizer Settings</pluralLabel>
</CustomObject>