AI_File_Summarier_Code_Base/force-app/main/default/objects/AI_File_Summarizer_Setting__mdt/fields/Feature_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Feature_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Controls whether the AI File Summarizer feature is enabled or disabled.</description>
    <label>Feature Enabled</label>
    <type>Checkbox</type>
</CustomField>