AI_File_Summarier_Code_Base/force-app/main/default/objects/AI_File_Summarizer_Setting__mdt/fields/File_Size__c.field-meta.xml
<CustomField>
    <fullName>File_Size__c</fullName>
    <description>The size of the file to be summarized.</description>
    <label>File Size</label>
    <length>15</length>
    <type>Text</type>
</CustomField>