AI_File_Summarier_Code_Base/force-app/main/default/objects/AI_File_Summarizer_Setting__mdt/fields/Sobject__c.field-meta.xml
<CustomField>
    <fullName>Sobject__c</fullName>
    <description
  >Stores the name of the Salesforce object (SObject) to which the AI File Summarizer configuration applies.</description>
    <label>Sobject</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>AI_File_Summarizer_Settings</relationshipLabel>
    <relationshipName>AI_File_Summarizer_Settings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>