AI_File_Summarier_Code_Base/force-app/main/default/objects/AI_File_Summarizer_Setting__mdt/fields/Supported_File_Type__c.field-meta.xml
<CustomField>
    <fullName>Supported_File_Type__c</fullName>
    <description
  >Defines the list of allowed file types that can be summarized by the AI File Summarizer. Only files matching these types will be processed.</description>
    <label>Supported File Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>